--- a/Excercise/Testtenta.ipynb
+++ b/Excercise/Testtenta.ipynb
@@ -76,21 +76,28 @@
     }
    ],
    "source": [
-    "from __future__ import annotations\n",
+    "from __future__ import annotations # måste vara längst upp\n",
     "from math import pi\n",
     "\n",
+    "def calc_sphere_volume(radius: (int | float)) -> float:\n",
+    "    \"\"\"Calculates volume of sphere of a given radius\"\"\" # nice med docstring\n",
+    "    if not isinstance(radius, (int, float)):\n",
+    "        raise TypeError(f\"Radius must be int or float, not {type(radius).__name__}\") #.__name__ changes <class str> to str\n",
+    "    if radius <= 0:\n",
+    "        raise ValueError(f\"Radius must be positive, not {radius}\")\n",
+    "    return (4*pi*radius**3) / 3\n",
     "\n",
-    "def calc_volume(radie: float) -> float:\n",
-    "    \"\"\"Calculates volume of sphere of a given radius\"\"\"\n",
-    "    if not isinstance(radie, (int, float)):\n",
-    "        raise TypeError(f\"Radius must be an int or float, not {type(value).__name__}\")\n",
-    "    if radie <= 0:\n",
-    "        raise ValueError(f\"Radius must be positive, not {radie}\")\n",
-    "    return (4*pi*radie**3)/3 #Tänk på prioritetsordningen\n",
     "\n",
-    "user_input = input(\"Enter radie of sphere to calculate its volume\")\n",
-    "try:\n",
-    "    user_input = float(user_input)"
+    "while True:     # while är inte nödvändig\n",
+    "    user_input = input(\"Enter radius of sphere to calculate its volume\")\n",
+    "    try:\n",
+    "        user_input = float(user_input)\n",
+    "        calc_sphere_volume(user_input)\n",
+    "        break   # måste ha break ifall vi har while\n",
+    "    except TypeError as err:\n",
+    "        print(err)\n",
+    "    except ValueError as err:\n",
+    "        print(err)"
    ]
   },
   {
