--- a/Excersism/guidos-lasagna.ipynb
+++ b/Excersism/guidos-lasagna.ipynb
@@ -1,80 +1,89 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "1. Define expected bake time in minutes\n",
-    "Define an EXPECTED_BAKE_TIME constant that returns how many minutes the lasagna should bake in the oven. According to your cookbook, the Lasagna should be in the oven for 40 minutes:\n",
-    "\n",
-    ">>> import lasagna\n",
-    ">>> lasagna.EXPECTED_BAKE_TIME\n",
-    "40"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "EXPECTED_BAKE_TIME = 40\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "2. Calculate remaining bake time in minutes\n",
-    "Implement the bake_time_remaining() function that takes the actual minutes the lasagna has been in the oven as an argument and returns how many minutes the lasagna still needs to bake based on the EXPECTED_BAKE_TIME.\n",
-    "\n",
-    ">>> from lasagna import bake_time_remaining\n",
-    ">>> bake_time_remaining(30)\n",
-    "10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10"
+       "4"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def bake_time_remaining(minutes):\n",
-    "    return (EXPECTED_BAKE_TIME - minutes)\n",
+    "EXPECTED_BAKE_TIME = 40\n",
+    "PREPARATION_TIME = 2 # Minutes for time to prepare\n",
     "\n",
-    "bake_time_remaining(30)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "3. Calculate preparation time in minutes\n",
-    "Implement the preparation_time_in_minutes() function that takes the number of layers you want to add to the lasagna as an argument and returns how many minutes you would spend making them. Assume each layer takes 2 minutes to prepare.\n",
+    "def bake_time_remaining(bake_time_minutes):\n",
+    "    \"\"\"Calculate the bake time remaining.\n",
+    "    :param: elapsed_bake_time: int baking time already elapsed.\n",
+    "    :return: int remaining bake time derived from 'EXPECTED_BAKE_TIME'.\n",
+    "    \n",
+    "    Function that takes the actual minutes lasagna has been in the oven as an argument\n",
+    "    and returns how many minutes the lasagna still needs to bake based on the EXPECTED_BAKE_TIME.\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    return (EXPECTED_BAKE_TIME - bake_time_minutes)\n",
     "\n",
-    ">>> from lasagna import preparation_time_in_minutes\n",
-    ">>> preparation_time_in_minutes(2)\n",
-    "4"
+    "def preparation_time_in_minutes(number_of_layers):\n",
+    "    \"\"\"Calculate the preparation time.\n",
+    "    :param: number_of_layers: int the number of lasagna layers made\n",
+    "    :return: int amoun of prep time (in minutes), based on 2 minutes per layer.\n",
+    "    \n",
+    "    This function takes an integer representing the number of layers added to the\n",
+    "    calculating preparation time using a time of 2 minutes per layer added.\n",
+    "    \"\"\"\n",
+    "    return(number_of_layers * PREPARATION_TIME)\n",
+    "\n",
+    "\n",
+    "def elapsed_time_in_minutes(number_of_layers, bake_time_minutes):\n",
+    "    \"\"\"Calculate elapsed time.\n",
+    "\n",
+    "    :param: int layers(added to the lasagna) + \n",
+    "    elapsed_bake_time(number has been making in the oven\n",
+    "\n",
+    "    :return: total numbers minutes cooking, or the sum of your preparation time and the\n",
+    "    time lasagna already spent in owen\n",
+    "    \"\"\"\n",
+    "    return preparation_time_in_minutes(number_of_layers) + bake_time_minutes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def preparation_time_in_minutes(layers)"
+    "def elapsed_time_in_minutes(number_of_layers, bake_time_minutes):\n",
+    "    \"\"\"Calculate elapsed time.\n",
+    "\n",
+    "    :param: int layers(added to the lasagna) + \n",
+    "    elapsed_bake_time(number has been making in the oven\n",
+    "\n",
+    "    :return: total numbers minutes cooking, or the sum of your preparation time and the\n",
+    "    time lasagna already spent in owen\n",
+    "    \"\"\"\n",
+    "    return preparation_time_in_minutes(number_of_layers) + bake_time_minutes\n",
+    "\n",
+    "\n",
+    "elapsed_time_in_minutes(3, 20)"
    ]
   }
  ],
