--- a/Repetition/Training.ipynb
+++ b/Repetition/Training.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a\n"
+      "i\n"
      ]
     }
    ],
@@ -25,7 +25,29 @@
     "husdjur = \"kanin\"\n",
     "\n",
     "# Start, stop, step\n",
-    "meddelande = husdjur[::-1][-2]\n",
+    "meddelande = husdjur[::-1][1]\n",
+    "\n",
+    "print(meddelande)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kn\n"
+     ]
+    }
+   ],
+   "source": [
+    "husdjur = \"kazin\"\n",
+    "\n",
+    "# Start, stop, step\n",
+    "meddelande = husdjur[::4]\n",
     "\n",
     "print(meddelande)"
    ]
@@ -160,9 +182,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Arean av kvadraten är: 1.0\n",
+      "Omkretsen av kvadraten är: 4.0\n"
+     ]
+    }
+   ],
    "source": [
     "def berakna_area_och_omkrets(side):\n",
     "    try:\n",
@@ -195,9 +226,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "person säger hej\n",
+      "Gubbe säger hej\n",
+      "Gubbe säger hej\n"
+     ]
+    }
+   ],
    "source": [
     "class Person:\n",
     "    def hej(self):\n",
@@ -212,14 +253,27 @@
     "        print(\"Viking säger hoy\")\n",
     "\n",
     "for person in (Person(), Gubbe(), Viking()):\n",
-    "    person.hej()\n"
+    "    person.hej()\n",
+    "\n",
+    "\n",
+    "# Inheritance "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "person säger hej\n",
+      "Student säger hej\n",
+      "Student säger hej\n"
+     ]
+    }
+   ],
    "source": [
     "class Person:\n",
     "    def hej(self):\n",
@@ -236,29 +290,6 @@
     "for person in (Person(), Student(), Viking()):\n",
     "    person.hej()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Arean av kvadraten är: 100.0\n",
-      "Omkretsen av kvadraten är: 40.0\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "attachments": {},
@@ -357,6 +388,121 @@
     "    print(\"good luck\")\n",
     "for i in range(1, 3):\n",
     "    print(\"good luck2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tt\n",
+      "tt\n",
+      "tt\n",
+      "tt\n",
+      "tt\n",
+      "tt\n",
+      "tt\n",
+      "tt\n",
+      "tt\n",
+      "tt\n"
+     ]
+    }
+   ],
+   "source": [
+    "rows = int(input(\"Enter the # rows: \"))\n",
+    "columns = int(input(\"Enter the # of columns: \"))\n",
+    "symbol = input(\"Enter a symbol to use: \")\n",
+    "\n",
+    "for x in range(rows):\n",
+    "    for y in range(columns):\n",
+    "        print(symbol, end=\"\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Skapa en funktion som tar in en summa pengar. \n",
+    "# Den ska returnera en lista av växel som representerar summan.\n",
+    "\n",
+    "# money = {\"Tusenlapp\": 1000, \"Tvåhundralapp\": 200, \"Tiokrona\": 10, \"Enkrona\": 1}\n",
+    "\n",
+    "def findSpendingLevel(moneySpent):\n",
+    "    if (moneySpent >= 1000): # If money is more or equal to 1000\n",
+    "        return 'Tusenlapp'\n",
+    "    if (moneySpent > 200 and moneySpent <= 200):\n",
+    "        return 'Tvåhundralapp'\n",
+    "    if (moneySpent <= 10):\n",
+    "        return \"Tiokrona\"\n",
+    "    if (moneySpent <= 1):\n",
+    "        return 'Enkrona'\n",
+    "\n",
+    "findSpendingLevel(139)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Skapa en funktion som tar in en summa pengar. Den ska returnera en lista av växel som representerar summan."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tusenlappar: 3\n",
+      "Tvåhundralappar: 1\n",
+      "Tiokrona: 2\n",
+      "Enkrona: 2\n",
+      "465 µs ± 20.3 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import timeit\n",
+    "\n",
+    "\n",
+    "def money_splitter(money):\n",
+    "    Tusenlapp, Tvåhundralapp, Tiokrona, Enkrona = 0, 0, 0, 0\n",
+    "\n",
+    "    while money >= 0:\n",
+    "        if money >= 1000:\n",
+    "            Tusenlapp += 1\n",
+    "            money -= 1000\n",
+    "\n",
+    "        elif money >= 200:\n",
+    "            Tvåhundralapp += 1\n",
+    "            money -= 200\n",
+    "\n",
+    "        elif money >= 10:\n",
+    "            Tiokrona += 1\n",
+    "            money -= 10\n",
+    "\n",
+    "        elif money >= 1:\n",
+    "            Enkrona += 1\n",
+    "            money -= 1\n",
+    "\n",
+    "        else:\n",
+    "            return print(\n",
+    "                f\"Tusenlappar: {Tusenlapp}\\nTvåhundralappar: {Tvåhundralapp}\\nTiokrona: {Tiokrona}\\nEnkrona: {Enkrona}\"\n",
+    "            )\n",
+    "money_splitter(3222)\n",
+    "\n",
+    "%timeit for x in range(10000): money_splitter"
    ]
   }
  ],
