--- a/Repetition/Training.ipynb
+++ b/Repetition/Training.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "i\n"
+      "kan\n"
      ]
     }
    ],
@@ -25,7 +25,7 @@
     "husdjur = \"kanin\"\n",
     "\n",
     "# Start, stop, step\n",
-    "meddelande = husdjur[::-1][1]\n",
+    "meddelande = husdjur[:3]\n",
     "\n",
     "print(meddelande)"
    ]
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -260,35 +260,78 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vi har tre klasser. Klassen Gubbe ärver från Person, och viking ärver från Gubben.\n",
+    "Eftersom man ärver attribut av andra klasser och Viking ärver attribut från \"Gubbe\" - inte \"Person\" så skriv alltså \n",
+    "\n",
+    "\n",
+    "\n",
+    "--------"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Try](Sk%C3%A4rmavbild%202023-04-10%20kl.%2015.49.50.png)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Testa](Sk%C3%A4rmavbild%202023-04-10%20kl.%2015.57.47.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uppgift 2 (3p)\n",
+    "\n",
+    "Simulera 1000000 tärningskast och beräkna antalet ettor, tvåor, treor, fyror, femmor och sexor. Spara resultatet i en lämplig datastruktur."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "person säger hej\n",
-      "Student säger hej\n",
-      "Student säger hej\n"
+      "{'roll1': 166229, 'roll2': 166778, 'roll3': 166560, 'roll4': 166948, 'roll5': 167088, 'roll6': 166397}\n"
      ]
     }
    ],
    "source": [
-    "class Person:\n",
-    "    def hej(self):\n",
-    "        print(\"person säger hej\")\n",
+    "import random as rnd\n",
+    "rolls = [rnd.randint(1, 6) for i in range (1000000)]\n",
     "\n",
-    "class Student(Person):\n",
-    "    def hej(self):\n",
-    "        print(\"Student säger hej\")\n",
+    "dice_rolls = dict(\n",
+    "    roll1 = rolls.count(1),\n",
+    "    roll2 = rolls.count(2),\n",
+    "    roll3 = rolls.count(3),\n",
+    "    roll4 = rolls.count(4),\n",
+    "    roll5 = rolls.count(5),\n",
+    "    roll6 = rolls.count(6),\n",
+    ")\n",
     "\n",
-    "class Viking(Student):\n",
-    "    def hoy(self):\n",
-    "        print(\"Viking säger hoy\")\n",
-    "\n",
-    "for person in (Person(), Student(), Viking()):\n",
-    "    person.hej()"
+    "print(dice_rolls)"
    ]
   },
   {
