--- a/Repetition/Training.ipynb
+++ b/Repetition/Training.ipynb
@@ -282,10 +282,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\t2\t3\t4\t5\t6\t7\t8\t9\t10\t\n",
+      "2\t4\t6\t8\t10\t12\t14\t16\t18\t20\t\n",
+      "3\t6\t9\t12\t15\t18\t21\t24\t27\t30\t\n",
+      "4\t8\t12\t16\t20\t24\t28\t32\t36\t40\t\n",
+      "5\t10\t15\t20\t25\t30\t35\t40\t45\t50\t\n"
+     ]
+    }
+   ],
+   "source": [
+    "def multiplication_table(n):\n",
+    "    for row in range(1, n+1):\n",
+    "        for col in range(1, n+6):\n",
+    "            print(row*col, end=\"\\t\")\n",
+    "        print()\n",
+    "\n",
+    "n = int(input('Skriv in positivt heltal mellan 0-15'))\n",
+    "multiplication_table(n)\n"
+   ]
   },
   {
    "attachments": {},
@@ -293,6 +314,132 @@
    "metadata": {},
    "source": [
     "![Testa](Sk%C3%A4rmavbild%202023-04-10%20kl.%2015.57.47.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "word_list = ['python', 'programming', 'data', 'science']\n",
+    "\n",
+    "def play_hangman():\n",
+    "    # choose a word and initialize the game state\n",
+    "    word = random.choice(word_list)\n",
+    "    guessed_letters = set()\n",
+    "    num_lives = 5\n",
+    "\n",
+    "    # loop until the player wins or runs out of lives\n",
+    "    while num_lives > 0:\n",
+    "        # print out the current state of the game\n",
+    "        print('Word:', ' '.join([letter if letter in guessed_letters else '_' for letter in word]))\n",
+    "        print('Guessed letters:', ' '.join(guessed_letters))\n",
+    "        print('Lives:', num_lives)\n",
+    "\n",
+    "        # get a letter guess from the player\n",
+    "        guess = input('Guess a letter: ').lower()\n",
+    "\n",
+    "        # check if the guess is in the word and update the game state\n",
+    "        if guess in word:\n",
+    "            guessed_letters.add(guess)\n",
+    "            if set(word) == guessed_letters:\n",
+    "                print('You win!')\n",
+    "                return\n",
+    "        else:\n",
+    "            num_lives -= 1\n",
+    "\n",
+    "    print('You lose!')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "play_hangman()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_ _ _ _ _ _ _ \n",
+      "Guessed letters: \n",
+      "_ c _ _ _ c _ \n",
+      "Guessed letters: c\n",
+      "s c _ _ _ c _ \n",
+      "Guessed letters: s c\n",
+      "s c _ _ _ c _ \n",
+      "Guessed letters: s c\n",
+      "s c i _ _ c _ \n",
+      "Guessed letters: s i c\n",
+      "s c i e _ c e \n",
+      "Guessed letters: s e i c\n",
+      "s c i e n c e \n",
+      "Guessed letters: e i c s n\n",
+      "You win!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "class Hangman:\n",
+    "    word_list = ['python', 'programming', 'data', 'science']\n",
+    "    num_lives = 5\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self.word = random.choice(self.word_list)\n",
+    "        self.guessed_letters = set()\n",
+    "\n",
+    "    def guess_letter(self, letter):\n",
+    "        \"\"\"Guess a letter and update the game state\"\"\"\n",
+    "        self.guessed_letters.add(letter)\n",
+    "        if letter not in self.word:\n",
+    "            self.num_lives -= 1\n",
+    "\n",
+    "    def print_word(self):\n",
+    "        \"\"\"Prints out the word with blanks for unguessed letters\"\"\"\n",
+    "        for letter in self.word:\n",
+    "            if letter in self.guessed_letters:\n",
+    "                print(letter, end=' ')\n",
+    "            else:\n",
+    "                print('_', end=' ')\n",
+    "        print()\n",
+    "\n",
+    "    def print_guessed_letters(self):\n",
+    "        \"\"\"Prints out the letters that have been guessed so far\"\"\"\n",
+    "        print('Guessed letters:', ' '.join(self.guessed_letters))\n",
+    "\n",
+    "    def play(self):\n",
+    "        # print out the initial state of the game\n",
+    "        self.print_word()\n",
+    "        self.print_guessed_letters()\n",
+    "\n",
+    "        while self.num_lives > 0:\n",
+    "            letter = input('Guess a letter: ')\n",
+    "            self.guess_letter(letter)\n",
+    "            self.print_word()\n",
+    "            self.print_guessed_letters()\n",
+    "            \n",
+    "            if set(self.word) == self.guessed_letters:\n",
+    "                print('You win!')\n",
+    "                return\n",
+    "            \n",
+    "        print('You lose!')\n",
+    "\n",
+    "\n",
+    "game = Hangman()\n",
+    "game.play()\n"
    ]
   },
   {
