--- a/Repetition/Training.ipynb
+++ b/Repetition/Training.ipynb
@@ -615,38 +615,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Skapa en funktion som tar in en summa pengar. \n",
-    "# Den ska returnera en lista av växel som representerar summan.\n",
-    "\n",
-    "# money = {\"Tusenlapp\": 1000, \"Tvåhundralapp\": 200, \"Tiokrona\": 10, \"Enkrona\": 1}\n",
-    "\n",
-    "def findSpendingLevel(moneySpent):\n",
-    "    if (moneySpent >= 1000): # If money is more or equal to 1000\n",
-    "        return 'Tusenlapp'\n",
-    "    if (moneySpent > 200 and moneySpent <= 200):\n",
-    "        return 'Tvåhundralapp'\n",
-    "    if (moneySpent <= 10):\n",
-    "        return \"Tiokrona\"\n",
-    "    if (moneySpent <= 1):\n",
-    "        return 'Enkrona'\n",
-    "\n",
-    "findSpendingLevel(139)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Skapa en funktion som tar in en summa pengar. Den ska returnera en lista av växel som representerar summan."
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 228,
    "metadata": {},
    "outputs": [
@@ -693,6 +661,56 @@
     "money_splitter(3222)\n",
     "\n",
     "%timeit for x in range(10000): money_splitter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tusenlapp: 2\n",
+      "Tvåhundralapp: 1\n",
+      "Tiokrona: 2\n",
+      "Enkrona: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def money_splitter(money):\n",
+    "    denominations = {'Tusenlapp': 1000, 'Tvåhundralapp': 200, 'Tiokrona': 10, 'Enkrona': 1}\n",
+    "    result = {denom: 0 for denom in denominations}\n",
+    "\n",
+    "    for denom, value in denominations.items():\n",
+    "        while money >= value:\n",
+    "            result[denom] += 1\n",
+    "            money -= value\n",
+    "\n",
+    "    for denom, count in result.items():\n",
+    "        print(f\"{denom}: {count}\")\n",
+    "\n",
+    "money_splitter(2222)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def money_splitter(money):\n",
+    "    denominations = {'Tusenlappar': 1000, 'Tvåhundralappar': 200, 'Tiokrona': 10, 'Enkrona': 1}\n",
+    "    result = {k: 0 for k in denominations}\n",
+    "\n",
+    "    for denomination, value in denominations.items():\n",
+    "        while money >= value:\n",
+    "            result[denomination] += 1\n",
+    "            money -= value\n",
+    "\n",
+    "    print('\\n'.join(f\"{k}: {v}\" for k, v in result.items()))\n"
    ]
   }
  ],
