--- a/Repetition/Training.ipynb
+++ b/Repetition/Training.ipynb
@@ -318,6 +318,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "word_list = ['ai', 'programming', 'computer', 'science']\n",
+    "\n",
+    "def play_hangman():\n",
+    "    word = random.choice(word_list)\n",
+    "    guessed_letters = set()\n",
+    "    num_lives = 5\n",
+    "\n",
+    "    while num_lives > 0:\n",
+    "        print('Word:',  ' '.join([letter if letter in guessed_letters else '_' for letter in word]))\n",
+    "        print('Guessed letters:', ' '.join(guessed_letters))\n",
+    "        print('Lives:', num_lives)\n",
+    "\n",
+    "        guess = input('Guess a letter: ').lower()\n",
+    "\n",
+    "        if guess in word:\n",
+    "            guessed_letters.add(guess)\n",
+    "            if set(word) == guessed_letters:\n",
+    "                print('You win')\n",
+    "                return\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 68,
    "metadata": {},
    "outputs": [],
@@ -615,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -625,15 +655,11 @@
       "Tusenlappar: 3\n",
       "Tvåhundralappar: 1\n",
       "Tiokrona: 2\n",
-      "Enkrona: 2\n",
-      "465 µs ± 20.3 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "Enkrona: 2\n"
      ]
     }
    ],
    "source": [
-    "import timeit\n",
-    "\n",
-    "\n",
     "def money_splitter(money):\n",
     "    Tusenlapp, Tvåhundralapp, Tiokrona, Enkrona = 0, 0, 0, 0\n",
     "\n",
@@ -658,9 +684,7 @@
     "            return print(\n",
     "                f\"Tusenlappar: {Tusenlapp}\\nTvåhundralappar: {Tvåhundralapp}\\nTiokrona: {Tiokrona}\\nEnkrona: {Enkrona}\"\n",
     "            )\n",
-    "money_splitter(3222)\n",
-    "\n",
-    "%timeit for x in range(10000): money_splitter"
+    "money_splitter(3222)\n"
    ]
   },
   {
